incluindo novo p dps do texto

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Minha página html</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas eligendi cupiditate itaque repellendus cumque iusto reprehenderit possimus doloremque natus blanditiis praesentium rem esse in voluptatibus voluptates, porro alias nam est!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem alias atque quibusdam quas, esse, accusantium vero assumenda est omnis, voluptatum architecto optio quo laudantium et sequi iste ducimus. Reprehenderit, eius.</p>
+    <p>novo p 2</p>
 </body>
 </html>
